--- a/src/BlazingPizza.Client/Shared/OrderReview.razor
+++ b/src/BlazingPizza.Client/Shared/OrderReview.razor
@@ -2,9 +2,8 @@
 {
     <p>
         <strong>
-            @(pizza.Size)"
             @pizza.Special?.Name
-            (£@pizza.GetFormattedTotalPrice())
+            (€@pizza.GetFormattedTotalPrice())
         </strong>
     </p>
 
@@ -19,7 +18,7 @@
 <p>
     <strong>
         Total price:
-        £@Order.GetFormattedTotalPrice()
+        €@Order.GetFormattedTotalPrice()
     </strong>
 </p>
 
