--- a/src/BlazingPizza.Client/wwwroot/css/site.css
+++ b/src/BlazingPizza.Client/wwwroot/css/site.css
@@ -899,7 +899,7 @@ input[type=range] {
 
     .alto-contraste .main {
         background: black;
-        color: white;
+        color: black;
     }
 
     .alto-contraste .nav-tab {
