--- a/src/BlazingPizza.Server/Areas/Identity/Pages/_Layout.cshtml
+++ b/src/BlazingPizza.Server/Areas/Identity/Pages/_Layout.cshtml
@@ -18,7 +18,7 @@
 <body>
     <div class="top-bar">
         <a class="logo" href="~/">
-            <img src="~/img/logo.svg" />
+            <img src="~/img/rivals.svg" />
         </a>
         <partial name="_LoginPartial" />
     </div>
