--- a/src/BlazingPizza.Client/Pages/MyOrders.razor
+++ b/src/BlazingPizza.Client/Pages/MyOrders.razor
@@ -2,7 +2,7 @@
 @attribute [Authorize]
 @inject OrdersClient OrdersClient
 
-<PageTitle>Blazing Pizza - My Orders</PageTitle>
+<PageTitle>Blazzing Rivals - My Orders</PageTitle>
 
 <div class="main">
     <TemplatedList Loader="@LoadOrders" ListGroupClass="orders-list">
@@ -17,7 +17,7 @@
                 Items:
                 <strong>@item.Order.Pizzas.Count()</strong>;
                 Total price:
-                <strong>£@item.Order.GetFormattedTotalPrice()</strong>
+                <strong>€@item.Order.GetFormattedTotalPrice()</strong>
             </div>
             <div class="col">
                 Status: <strong>@item.StatusText</strong>
