--- a/src/BlazingPizza.Client/Pages/OrderDetails.razor
+++ b/src/BlazingPizza.Client/Pages/OrderDetails.razor
@@ -4,7 +4,7 @@
 @inject OrdersClient OrdersClient
 @implements IDisposable
 
-<PageTitle>Blazing Pizza - Order Details</PageTitle>
+<PageTitle>Blazing Rivals - Order Details</PageTitle>
 
 <div class="main">
     @if (invalidOrder)
